# pypack

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  run.py
modal/: serverless_deploy.py
pyper/: hash.py
tests/: test_hash.py
tests/integration/: test_one.py
