[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyper"
version = "0.0.0"
description = "Python packaging lib for the minimalists."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
maintainers = [
  { name = "SecondLaw Research", email = "efe@2lw.ai" },
  { name = "SecondLaw Research", email = "murat@2lw.ai" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["packaging", "minimalist", "python"]
dependencies = ["base58"]

[tool.setuptools.packages.find]
include = ["pyper", "pyper.*"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "twine", "build", "coverage", 'bumpver']

[project.urls]
"Homepage" = "https://github.com/secondlaw-ai/skyrim"
"Docs" = "https://github.com/secondlaw-ai/skyrim"
"Tracker" = "https://github.com/secondlaw-ai/skyrim/issues"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
  \.git  # Git version control directory
  | \.tox  # tox environment directories
  | \.venv  # Virtual environment directories
  | build  # Build output directory
  | dist  # Distribution output directory
  | migrations  # Database migrations in Django/Flask projects
  | __pycache__  # Python bytecode cache directories
  | .*\.egg-info  # Egg information directories
  | .*\.whl  # Wheel package files
  | .*/tests/resources  # Test resource files, typically not code
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"

# ==== Coverage.py configuration (ran using pytest-cov) ====
# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
source = ["pyper"]

[tool.coverage.xml]
output = "pyper.coverage.xml"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["tests/*"]
show_missing = true
fail_under = 20

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
